[gd_scene load_steps=6 format=2]

[ext_resource path="res://Shooting_trap.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset/main_lev_build.png" type="Texture" id=2]
[ext_resource path="res://sound effects/arrow/zapsplat_warfare_bow_arrow_fire_shoot_001_40986.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -32, 32, 0, 32, 32, 32, 32, 0, 32, -32, -32, -32, -32, 0 )

[node name="Shooting_trap" type="StaticBody2D"]
rotation = -0.00321019
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 144, 176, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 160, 0 )

[node name="SoundShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.176793, 0.0889634 )
scale = Vector2( 3.22151, 3.23466 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
